--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "nodemon index.js"
   },
   "name": "email-formatter",
-  "version": "1.0.2",
-  "description": "email formatter",
+  "version": "1.0.4",
+  "description": "email formatter library gmail",
   "main": "index.js",
   "devDependencies": {},
   "repository": {
